# osc-sdk-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REUSE.toml  USAGE.md  api_version  build.rs  deny.toml  flake.nix  gen.yml  local_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/scripts/: release-build.sh  release-check-duplicate.sh  release-pr.sh  release-push.sh
.github/workflows/: build.yml  codeql.yml  pr.yml  publish.yml  pull-request.yml
.patches/: 0001-Add-ConfigurationFile-to-parse-.osc-config.json.patch  0002-Add-rustls-tls-feature-to-make-static-binaries.patch  0003-feat-retry-and-backoff-handling.patch
.reuse/: dep5
config/oks/: cfg.yaml
config/osc/: api.yaml  cfg.yaml  patch.yaml
crates/sdk/: Cargo.toml  build.rs
crates/sdk-build/: Cargo.toml  build.rs
crates/sdk-build/src/: lib.rs
crates/sdk/examples/: project.rs
crates/sdk/src/: errors.rs  lib.rs  oks.rs  policy.rs  transport.rs
crates/sdk/src/basicauth/: config.rs  layer.rs  mod.rs  service.rs
crates/sdk/src/signv4/: config.rs  layer.rs  mod.rs  service.rs
docs/: AcceptNetPeeringRequest.md  AcceptNetPeeringResponse.md  AccepterNet.md  AccessKey.md  AccessKeyApi.md  AccessKeySecretKey.md  AccessLog.md  Account.md  AccountApi.md  ActionsOnNextBoot.md  AddUserToUserGroupRequest.md  AddUserToUserGroupResponse.md  ApiAccessPolicy.md  ApiAccessPolicyApi.md  ApiAccessRule.md  ApiAccessRuleApi.md  ApiLogApi.md  ApplicationStickyCookiePolicy.md  BackendVmHealth.md  BlockDeviceMappingCreated.md  BlockDeviceMappingImage.md  BlockDeviceMappingVmCreation.md  BlockDeviceMappingVmUpdate.md  BootMode.md  BsuCreated.md  BsuToCreate.md  BsuToUpdateVm.md  Ca.md  CaApi.md  Catalog.md  CatalogApi.md  CatalogEntry.md  Catalogs.md  CheckAuthenticationRequest.md  CheckAuthenticationResponse.md  ClientGateway.md  ClientGatewayApi.md  Co2CategoryDistribution.md  Co2EmissionEntry.md  Co2FactorDistribution.md  (+677 more)
examples/: README.md  config_example.json  config_file.rs  keypair.rs  project.rs  region.rs  vm.rs  volume.rs
hacks/generator/: go.mod  go.sum  main.go  paths.go  schema.go
hacks/generator/templates/: operations.tmpl
src/: errors.rs  lib.rs  oks.rs  osc.rs  policy.rs  profile.rs  transport.rs
src/apis/: access_key_api.rs  account_api.rs  api_access_policy_api.rs  api_access_rule_api.rs  api_log_api.rs  ca_api.rs  catalog_api.rs  client_gateway_api.rs  configuration.rs  configuration_file.rs  dedicated_group_api.rs  dhcp_option_api.rs  direct_link_api.rs  direct_link_interface_api.rs  flexible_gpu_api.rs  identity_provider_api.rs  image_api.rs  internet_service_api.rs  keypair_api.rs  listener_api.rs  load_balancer_api.rs  load_balancer_policy_api.rs  location_api.rs  middleware.rs  mod.rs  nat_service_api.rs  net_access_point_api.rs  net_api.rs  net_peering_api.rs  nic_api.rs  policy_api.rs  product_type_api.rs  public_catalog_api.rs  public_ip_api.rs  quota_api.rs  region_api.rs  route_api.rs  route_table_api.rs  security_group_api.rs  security_group_rule_api.rs  (+14 more)
src/basicauth/: signer.rs
src/models/: accept_net_peering_request.rs  accept_net_peering_response.rs  accepter_net.rs  access_key.rs  access_key_secret_key.rs  access_log.rs  account.rs  actions_on_next_boot.rs  add_user_to_user_group_request.rs  add_user_to_user_group_response.rs  api_access_policy.rs  api_access_rule.rs  application_sticky_cookie_policy.rs  backend_vm_health.rs  block_device_mapping_created.rs  block_device_mapping_image.rs  block_device_mapping_vm_creation.rs  block_device_mapping_vm_update.rs  boot_mode.rs  bsu_created.rs  bsu_to_create.rs  bsu_to_update_vm.rs  ca.rs  catalog.rs  catalog_entry.rs  catalogs.rs  check_authentication_request.rs  check_authentication_response.rs  client_gateway.rs  co2_category_distribution.rs  co2_emission_entry.rs  co2_factor_distribution.rs  consumption_entry.rs  create_access_key_request.rs  create_access_key_request_expiration_date.rs  create_access_key_response.rs  create_account_request.rs  create_account_response.rs  create_api_access_rule_request.rs  create_api_access_rule_response.rs  (+627 more)
src/signoks/: config.rs  layer.rs  mod.rs  service.rs  signer.rs
src/signv4/: config.rs  service.rs  signer.rs
templates/: Cargo.mustache  configuration_file.rs  middleware.rs  profile.rs
templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
