[workspace]
resolver = "3"
members = ["crates/sdk-build", "crates/sdk"]

[workspace.package]
edition = "2024"
authors = ["Outscale SAS <opensource@outscale.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/outscale/osc-sdk-rust/"
version = "2.0.0-alpha.0"

[workspace.dependencies]
# SDK dependencies
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.32"
hmac = "0.12.1"
home = "0.5.12"
log = "0.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = "1"
tower = { version = "0.5.3", features = ["limit", "retry", "util", "buffer"] }
base64 = "0.22"
reqwest = { version = "^0.13", features = ["json", "http2", "system-proxy", "charset"], default-features = false }

# Dev dependencies
env_logger = "*"
tempfile = "3"
serial_test = "3"

# Internal dependencies
osc-sdk-rust-build = { path = "crates/sdk-build" }
