[package]
name = "osc-sdk-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Outscale API SDK"

[dependencies]
chrono.workspace = true
futures.workspace = true
hmac.workspace = true
home.workspace = true
log.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
env_logger.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[build-dependencies]
osc-sdk-rust-build.workspace = true

[features]
default = ["default-tls", "osc", "oks"]
native-tls = ["reqwest/native-tls"]
default-tls = ["reqwest/default-tls"]
osc = []
oks = []
